---------------------------------------------------------------------------------------------------
Version: 2.0.2
  Bugfixes:
    - Fixed crash with P.U.M.P. mod
    - Fixed Growth Accelerator message crash
---------------------------------------------------------------------------------------------------
Version: 2.0.1
  Features:
    - Moved to Factorio version 2.0 (playable with Space Age but not balanced/reworked for Space Age)
    - Added triggers to some technologies to automatically unlock them as you mine and refine Tiberium
    - Added setting to go back to old technologies without triggers
---------------------------------------------------------------------------------------------------
Version: 1.1.30
  Bugfixes:
    - Fixed crash when deleting surface that has SRF emitters on it (this one slipped through 1.1.17's surface fixes)
    - Fixed possible crash from trees growing on top of Tiberium Ore patches
    - Fixed Sonic Emitter shadow to not be a laser turret (did you even notice it before?)
    - Fixed Inventory Tiberium Damage Scale setting not applying until you restarted your game
  Changes:
    - Split the ambiguous 0-100 Tiberium Patch Size setting into two self-explanatory settings: Tiberium Patch Radius and Grow New Tiberium Nodes
    - Added support for changing 8 more settings without needing to restart Factorio
    - Added missing temperature requirement on steam for the Accelerated Liquid Tiberium Processing recipe
    - Removed Copper from Empty Cell recipe
    - Reduced plastic cost of empty cells per recipe from 5 to 4
    - Increased empty cell recipe output from 10 to 12
    - Halved Liquid Tiberium cost of filling cells
    - Changed Sonic Emitter recipes to require Programmable Speakers and Batteries instead of Electric Engine Units and Copper Plates
    - Standardized Tiberium Growth Accelerator stack size from 15 to 20
    - Reorganized crafting menu to place all Tiberium Node-related structures on a single row
  Features: